refactor(model): redesign masked reductions